kubernetes/apps/security/crowdsec/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - crowdsec.melotic.dev
  rules:
    - backendRefs:
        - name: crowdsec
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
