kubernetes/apps/security/crowdsec/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/CiliumProject/cilium/main/pkg/k8s/apis/cilium.io/client/crds/v2/ciliumnetworkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: crowdsec
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": network
            "k8s:app.kubernetes.io/component": proxy
            "k8s:app.kubernetes.io/managed-by": envoy-gateway
            "k8s:app.kubernetes.io/name": envoy
            "k8s:gateway.envoyproxy.io/owning-gateway-name": envoy-internal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromCIDR:
        - 10.20.0.147/32
        - 10.20.0.119/32
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": database
            "k8s:cnpg.io/poolerName": postgres-cluster-pooler-rw
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toCIDR:
        - 10.43.193.18/32
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": database
            "k8s:cnpg.io/poolerName": postgres-cluster-pooler-rw
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
